--- a/design/css/style.css
+++ b/design/css/style.css
@@ -1,15 +1,22 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:400|Poppins:400");
 
+:root {
+  --gray-background-color: #f5f5f5;
+  --text-color: #333;
+
+  --index-text-color: #495057;
+  --main-container-width: 70%;
+}
 html {
   font-size: 100%;
 } /*16px*/
 
 body {
-  background-color: #f5f5f5;
+  background-color: var(--gray-background-color);
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   line-height: 1.65;
-  color: #333;
+  color: var(--text-color);
   margin: 0;
 }
 
@@ -66,6 +73,7 @@ small,
   justify-content: flex-end;
   margin: 0;
   padding: 0;
+  background-color: white;
 }
 
 .navlist__item {
@@ -113,7 +121,7 @@ small,
 }
 
 .index-text__text {
-  color: #495057;
+  color: var(--index-text-color);
 }
 
 /* index search form */
@@ -155,6 +163,73 @@ button {
   padding: 0.25rem 2rem;
 }
 
+/* search results page */
+.search_results_container {
+  padding: 1rem;
+  background-color: var(--gray-background-color);
+  width: var(--main-container-width);
+  margin: 0 auto;
+}
+.search_results_header {
+  color: #5d5a86;
+  margin: 0 0 0.5rem 0;
+}
+
+.search_results_count {
+  font-size: medium;
+  margin-top: 0;
+}
+
+.search_result_list {
+  list-style-type: none;
+  background-color: white;
+  display: grid;
+  /* grid-template-columns: repeat(3, 1fr); */
+  grid-template-columns: repeat(3, minmax(300px, 1fr));
+  grid-auto-rows: 400px;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+.search_result_list__item {
+  background-color: #f5f5f5;
+  border: solid 1px #e3dcdc;
+  overflow: hidden;
+}
+
+.result__title {
+  margin: 1rem;
+  text-align: center;
+  font-size: medium;
+  font-weight: bold;
+}
+
+.result__image {
+  display: block;
+  margin: 0 auto;
+}
+
+.result__about_text {
+  text-align: center;
+  color: #495057;
+  margin: 0.25rem;
+}
+
+.result__button {
+  background-color: #5584db;
+  border: solid 1px #264886;
+  border-radius: 8px;
+  color: white;
+  padding: 0.25rem 1rem;
+  display: block;
+  margin: 1rem auto;
+}
+
+.drop_shadow {
+  box-shadow: 2px 2px 4px #333;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
 @media (max-width: 1100px) {
   .search-form-container {
     width: 90%;
@@ -163,9 +238,17 @@ button {
   .index-text-container {
     width: 70%;
   }
+
+  .search_result_list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .search_results_container {
+    background-color: white;
+    width: 90%;
+  }
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   .search-form-container {
     width: 90%;
     border-radius: 0;
@@ -178,5 +261,11 @@ button {
     height: 30%;
     padding-bottom: 1rem;
     margin-bottom: 1rem;
+  }
+
+  .search_result_list {
+    grid-template-columns: repeat(1, 100%);
+    padding: 0;
+    margin: 0;
   }
 }
