--- a/design/css/style.css
+++ b/design/css/style.css
@@ -1,271 +1,155 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:400|Poppins:400");
+@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
 :root {
-  --gray-background-color: #f5f5f5;
-  --text-color: #333;
+  --navlist-bg-color: white;
 
-  --index-text-color: #495057;
-  --main-container-width: 70%;
+  --text-color: #5d5a86;
+  --hero-bg-color-mobile: #333;
+  --main-hero-text-color: white;
+
+  --search-form-bg-color: #4c78bf;
+  --search-form-border-color: #5584db;
+  --search-button-bg-color: #1f314f;
+  --search-button-border-color: #667184;
 }
-html {
-  font-size: 100%;
-} /*16px*/
 
+* {
+  box-sizing: border-box;
+}
 body {
-  background-color: var(--gray-background-color);
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  line-height: 1.65;
-  color: var(--text-color);
+  font-family: "Poppins";
+  font-size: 16px;
   margin: 0;
 }
 
 p {
-  margin-bottom: 1.15rem;
+  color: var(--text-color);
+  font-size: 1rem;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-  margin: 2.75rem 0 1.05rem;
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  line-height: 1.15;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 3.052em;
-}
-
-h2 {
-  font-size: 2.441em;
-}
-
-h3 {
-  font-size: 1.953em;
-}
-
-h4 {
-  font-size: 1.563em;
-}
-
-h5 {
-  font-size: 1.25em;
-}
-
-small,
-.text_small {
-  font-size: 0.8em;
-}
-
-.main-container {
-  /* width: 75%;
-  margin: 0 auto; */
-}
-
-/* navigation */
 .navlist {
-  list-style-type: none;
   display: flex;
   justify-content: flex-end;
-  margin: 0;
+  list-style-type: none;
   padding: 0;
-  background-color: white;
+  margin: 0;
+  background-color: var(--navlist-bg-color);
 }
 
-.navlist__item {
-  /* margin-left: 2rem; */
-  flex: 10%;
-
+.navlist li {
+  color: var(--text-color);
+  margin: 0 1rem;
+  flex: 1;
   text-align: right;
-  padding-right: 1rem;
-}
-
-.navlist__item:first-child {
-  flex: 80%;
-  text-align: left;
-  padding-left: 1rem;
-}
-
-/* hero card on front page */
-.main-hero {
-  height: 600px;
-  background-image: url("../images/bigdog.jpg");
-  background-position: top center;
-  padding-left: 1rem;
-}
-
-.main-hero__title {
-  color: white;
-  padding-top: 3rem;
-  margin-bottom: 0;
-}
-
-.main-hero__subtitle {
-  color: white;
-  margin-top: 0;
-  font-size: large;
-}
-/* article text on index */
-.index-text-container {
-  width: 50%;
-  margin: 0 auto;
-}
-
-.index-text__header {
-  font-size: large;
+  font-size: 1.2rem;
   font-weight: bold;
 }
 
-.index-text__text {
-  color: var(--index-text-color);
+.navlist li:first-child {
+  text-align: left;
+  flex: 4;
 }
 
-/* index search form */
-.search-form-container {
-  background-color: #4c78bf;
-  border: solid 1px #5584db;
-  border-radius: 10px;
-  box-shadow: 2px 2px 4px #000;
-  width: 50%;
-  margin: 0 auto;
-  margin-top: -5rem;
-  padding-top: 1rem;
+.main-page-hero {
+  height: 500px;
+  background-image: url("../images/bigdog.jpg");
+  background-size: cover;
+  background-position: top center;
+  background-repeat: no-repeat;
+  padding: 1rem;
 }
 
-.search-form {
+.main-page-hero h1,
+.main-page-hero h2 {
+  color: var(--main-hero-text-color);
+  margin: 0;
+}
+
+.main-page-hero h1 {
+  font-size: 3rem;
+}
+.main-page-hero h2 {
   font-size: 1.5rem;
-  font-family: "Poppins";
-  padding: 0.25rem;
+  font-weight: normal;
+}
+
+.main-page-container {
+  /* width: 55%; */
+  width: 60%;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.search-form-container {
+  border: solid 1px var(--search-form-border-color);
+  background-color: var(--search-form-bg-color);
+  /* height: 10rem; */
+  margin-top: -6rem;
+  margin-bottom: 2rem;
+  border-radius: 10px;
+  padding: 1rem 2rem;
+  box-shadow: 0 5px 20px 0 #868686;
+  font-size: 1.5rem;
 }
 
 input,
 button {
-  font-family: inherit;
   font-size: inherit;
-  padding: inherit;
-}
-.search-form__input {
-  display: block;
-  width: 90%;
-  margin: 1rem auto;
+  font-family: inherit;
 }
 
-.search-form__button {
+input {
   display: block;
-  margin: 1rem auto;
-  background-color: #1f314f;
+  width: 100%;
+  margin: 1rem auto 0 auto;
+  padding: 0.5rem;
+}
+
+.button-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 1rem;
+}
+.search-form-button {
   color: white;
-  border: none;
-  padding: 0.25rem 2rem;
-}
-
-/* search results page */
-.search_results_container {
-  padding: 1rem;
-  background-color: var(--gray-background-color);
-  width: var(--main-container-width);
-  margin: 0 auto;
-}
-.search_results_header {
-  color: #5d5a86;
-  margin: 0 0 0.5rem 0;
-}
-
-.search_results_count {
-  font-size: medium;
-  margin-top: 0;
-}
-
-.search_result_list {
-  list-style-type: none;
-  background-color: white;
-  display: grid;
-  /* grid-template-columns: repeat(3, 1fr); */
-  grid-template-columns: repeat(3, minmax(300px, 1fr));
-  grid-auto-rows: 400px;
-  gap: 2rem;
-  padding: 2rem;
-}
-
-.search_result_list__item {
-  background-color: #f5f5f5;
-  border: solid 1px #e3dcdc;
-  overflow: hidden;
-}
-
-.result__title {
-  margin: 1rem;
-  text-align: center;
-  font-size: medium;
-  font-weight: bold;
-}
-
-.result__image {
-  display: block;
-  margin: 0 auto;
-}
-
-.result__about_text {
-  text-align: center;
-  color: #495057;
-  margin: 0.25rem;
-}
-
-.result__button {
-  background-color: #5584db;
-  border: solid 1px #264886;
-  border-radius: 8px;
-  color: white;
-  padding: 0.25rem 1rem;
-  display: block;
+  background-color: var(--search-button-bg-color);
+  border: solid 1px var(--search-button-border-color);
+  padding: 0.5rem 4rem;
   margin: 1rem auto;
 }
 
-.drop_shadow {
-  box-shadow: 2px 2px 4px #333;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+.search-form-button:hover {
+  background-color: #303b4e;
 }
-@media (max-width: 1100px) {
-  .search-form-container {
-    width: 90%;
-  }
-
-  .index-text-container {
-    width: 70%;
-  }
-
-  .search_result_list {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  .search_results_container {
-    background-color: white;
-    width: 90%;
+@media (max-width: 1200px) {
+  .main-page-container {
+    width: 80%;
   }
 }
 
-@media (max-width: 800px) {
-  .search-form-container {
-    width: 90%;
-    border-radius: 0;
-    margin-top: 0;
+@media (max-width: 900px) {
+  .main-page-container {
+    width: 100%;
+    padding: 1rem;
   }
-
-  .main-hero {
+  .main-page-hero {
+    height: auto;
+    margin-bottom: 0;
+    background-color: var(--hero-bg-color-mobile);
     background-image: none;
-    background-color: gray;
-    height: 30%;
-    padding-bottom: 1rem;
-    margin-bottom: 1rem;
   }
 
-  .search_result_list {
-    grid-template-columns: repeat(1, 100%);
-    padding: 0;
+  .search-form-container {
     margin: 0;
+    border: none;
+    border-radius: 0;
+    box-shadow: none;
+  }
+  .button-container {
+    display: block;
+  }
+
+  .search-form-button {
+    width: 100%;
   }
 }
